--- a/doku/templates/doku/oel.html
+++ b/doku/templates/doku/oel.html
@@ -13,7 +13,7 @@
     <h2>Einheiten</h2>
     <div class="minimize-button active">-</div>
     <div class="minimize-this" style="display:block;">
-        &nbsp;<br/>&nbsp;
+        <div class="spacer"></div>
         {% if einheiten %}
         <ul id="Einheitenliste">
             {% for Einheit in einheiten %}
@@ -23,6 +23,16 @@
             {% endfor %}
         </ul>
         {% endif %}
+        {% if autor %}
+        <div class="Formular">
+            <form name="neue_Einheit" action="{% url 'doku:oel' einsatz.Nummer %}" method="post" autocomplete="off">
+                {% csrf_token %}
+                <input hidden class="do-not-show" autocomplete="false">
+                <input id="EinheitName" name="Name" placeholder="Name der Einheit" required/>
+                <input type="submit" class="check" value="Weitere Einheit anlegen">
+            </form>
+        </div>
+        {% endif %}
     </div>
 </div>
 
@@ -31,18 +41,29 @@
     <h2>Einsätze in Arbeit</h2>
     <div class="minimize-button active">-</div>
     <div class="minimize-this" style="display:block;">
-        &nbsp;<br/>&nbsp;
+        <div class="spacer"></div>
         {% if einsatzstellen %}
         <ul id="aktiv">
             {% for Einsatzstelle in einsatzstellen %}
             {% if Einsatzstelle.Einheit %}
             {% if not Einsatzstelle.Abgeschlossen %}
             <li class="Einsatzstelle" style="background-color: {{ Einsatzstelle.Ort.Farbe }};"
-                data-toggle="tooltip" title="Gemeldet:<br>{{ Einsatzstelle.Gemeldet }}<br>Übernommen:<br>{{ Einsatzstelle.Zugewiesen }}"
+                data-toggle="tooltip"
+                title="Gemeldet:<br>{{ Einsatzstelle.Gemeldet }}<br>Übernommen:<br>{{ Einsatzstelle.Zugewiesen }}"
                 data-html="true"
                 data-placement="bottom">
+                <div class="floating-button">
+                    <form name="Einsatzstelle_fertig" action="{% url 'doku:oel' einsatz.Nummer %}" method="post" autocomplete="off">
+                        {% csrf_token %}
+                        <input hidden class="do-not-show" name="Einsatzstelle" value="{{ Einsatzstelle.pk }}">
+                        <input hidden class="do-not-show" name="DONE" value="1" autocomplete="false">
+                        <input type="submit" class="check" value="abgearbeitet">
+                    </form>
+                </div>
+                <div>
                 {{ Einsatzstelle.Einheit }} @ {{ Einsatzstelle }}
                 {% if Einsatzstelle.Anmerkungen %}<p class="Anmerkung">{{ Einsatzstelle.Anmerkungen }}</p>{% endif %}
+                </div>
             </li>
             {% endif %}
             {% endif %}
@@ -53,9 +74,9 @@
     <h2>abgeschlossene Einsätze</h2>
     <div class="minimize-button active">-</div>
     <div class="minimize-this" style="display:none;">
-        &nbsp;<br/>&nbsp;
+        <div class="spacer"></div>
         {% if einsatzstellen %}
-        <ul id="aktiv">
+        <ul id="fertig">
             {% for Einsatzstelle in einsatzstellen %}
             {% if Einsatzstelle.Einheit %}
             {% if Einsatzstelle.Abgeschlossen %}
@@ -78,7 +99,35 @@
     <h2 class="do-not-print">offene Einsätze</h2>
     <div class="minimize-button active">-</div>
     <div class="minimize-this" style="display:block;">
-        &nbsp;<br/>&nbsp;
+        <div class="spacer"></div>
+        {% if autor %}
+        <div class="Formular">
+            <form name="neue_Einsatzstelle" action="{% url 'doku:oel' einsatz.Nummer %}" method="post" autocomplete="off">
+                {% csrf_token %}
+                <input hidden class="do-not-show" autocomplete="false">
+                <input id="EStellenName" name="Name" placeholder="Adresse oder Name" required/>
+                <select class="Ort" name="Ort">
+                    <option value="" disabled selected>Ort</option>
+                    {% for Ort in alle_Orte %}
+                        <option value="{{ Ort.Kurzname }}">{{ Ort.Langname }}</option>
+                    {% endfor %}
+                </select>
+                <input hidden class="Freitext" name="Freitext" placeholder="Freitext Ort">
+                <input id="EStellenAnmerkungen" name="Anmerkungen" placeholder="Anmerkungen"/>
+                <input type="submit" class="check" value="Einsatzstelle hinzufügen">
+            </form>
+            <script>
+                $(".Freitext").hide();
+                $(".Ort").change(function() {
+                    if($(".Ort option:selected").text() == "Freitext") {
+                        $(".Freitext").show();
+                    } else {
+                        $(".Freitext").hide();
+                    }
+                });
+            </script>
+        </div>
+        {% endif %}
         {% if einsatzstellen %}
         <ul id="offen">
             {% for Einsatzstelle in einsatzstellen %}
@@ -86,9 +135,28 @@
             <li class="Einsatzstelle" style="background-color: {{ Einsatzstelle.Ort.Farbe }};"
                 data-toggle="tooltip" title="Gemeldet:<br>{{ Einsatzstelle.Gemeldet }}"
                 data-html="true"
-                data-placement="bottom">
+                data-placement="left">
                 {{ Einsatzstelle }}
-                {% if Einsatzstelle.Anmerkungen %}<p class="Anmerkung">{{ Einsatzstelle.Anmerkungen }}</p>{% endif %}
+                <ul class="EinsatzstelleMenu noClick">
+                    {% if Einsatzstelle.Anmerkungen %}
+                    <li class="Anmerkung">{{ Einsatzstelle.Anmerkungen }}</li>
+                    {% endif %}
+                    <li>
+                        <form name="Einsatzuebernahme" action="{% url 'doku:oel' einsatz.Nummer %}" method="post" autocomplete="off">
+                            {% csrf_token %}
+                            <input hidden class="do-not-show" name="Einsatzstelle" value="{{ Einsatzstelle.pk }}">
+                            <select class="Einheit" name="Einheit">
+                                <option value="" disabled selected>Einheit</option>
+                                {% for Einheit in einheiten %}
+                                <option value="{{ Einheit.pk }}">
+                                    {{ Einheit }} ({{ Einheit.getAnzahlEinsatzstellen }})
+                                </option>
+                                {% endfor %}
+                            </select>
+                            <input type="submit" class="check" value="Einsatz zuweisen">
+                        </form>
+                    </li>
+                </ul>
             </li>
             {% endif %}
             {% endfor %}
