OEL in good shape, only minor things missing

--- a/doku/templates/doku/base_generic.html
+++ b/doku/templates/doku/base_generic.html
@@ -89,5 +89,10 @@
 			document.documentElement.style.setProperty('--text-inverse-color', '#000');
 		</script>
 	{% endif %}
+	{% if error %}
+	<script>
+		alert("{{ error }}");
+	</script>
+	{% endif %}
 </body>
 </html>
