--- a/doku/static/doku/style.css
+++ b/doku/static/doku/style.css
@@ -131,6 +131,7 @@ div.minimize-button {
 	float: right;
 	font-size: 150%;
 	width:5%;
+	cursor: pointer;
 }
 
 h2 {
@@ -530,6 +531,7 @@ input {
     float: right;
     margin: 0;
     padding: 0;
+    margin-right: 2%;
 }
 .floating-button * {
     width: 100% !important;
