--- a/doku/static/doku/style.css
+++ b/doku/static/doku/style.css
@@ -265,7 +265,7 @@ form {
 	width: 100%;
 	padding-bottom: 25px;
 }
-input, select {
+input, select, textarea {
 	border: none;
 	border-bottom: 1px solid var(--text-inverse-color);
 	display: block;
@@ -284,7 +284,7 @@ input[type=submit] {
 	margin-bottom: 0;
 	float: left;
 }
-input:focus, select:focus {
+input:focus, select:focus, textarea:focus {
 	border: 1px solid var(--highlight-color);
 	outline: none;
 }
@@ -546,4 +546,16 @@ button p {
     width: 100% !important;
     height: inherit !important;
     margin: inherit;
+}
+
+.message-time {
+    margin: 0;
+    width: 10%;
+    padding: 0;
+}
+
+.message-text {
+    margin: 0;
+    width: 90%;
+    padding: 0;
 }
